<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_add_tracking_tag"
        android:icon="@drawable/v_folder_add_dark_x24"
        android:title="@string/add_tracking_tag"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_refresh_tracking"
        android:icon="@drawable/v_refresh_dark_x24"
        android:title="@string/refresh"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_manage_tracking_tags"
        android:icon="@drawable/v_folder_move_dark_x24"
        android:title="@string/manage_tracking_tags"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_tracking_mark_all_read"
        android:icon="@drawable/v_check_all_dark_x24"
        android:title="@string/tracking_mark_all_read"
        app:showAsAction="ifRoom" />
</menu>
